application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: hmoon
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: myapp
  ports:
    - protocol: TCP
      port: 80 # 서비스의 포트번호
      targetPort: 8080 # pod의 포트번호
